@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 * Allow storage of sync tab selection to be configured using `tabs-sync-storage-key` and `tabs-sync-storage-scope` document attributes
 * Add `is-loaded` class to tabs blocks on next tick after initialization for binding transitions (#50)
+* Allow sync group ID to be specified rather than derived using the `sync-group-id` attribute on the tabs block (#52)
 
 === Changed
 
